--- a/game.css
+++ b/game.css
@@ -8,25 +8,46 @@ body{
 	position: absolute;
 	border: solid 1px;
 }
+header{
+	width: auto;
+	background-color: aqua;
+	position: absolute;
+	margin-top: 0px;
+	margin-left: 150px;
+	font-size: 25px;
+}
 #bord{
 	width: 300px;
 	height: 500px;
-	top: 100px;
-	left: 100px;
+	margin-top: 50px;
+	margin-left: 50px;
 	position: absolute;
+
 }
 #startbtn{
-	background-color: grey;
+	background-color: red;
 	width: 100px;
 	height: 50px;
-	display: block;
+	margin-top: 525px;
+	margin-left: 400px;
+	position: absolute;
+	border: solid 2px;
 }
 #stopbtn{
-	background-color: grey;
+	background-color: cyan;
 	width: 100px;
 	height: 50px;
-	display: block;
+	margin-top: 525px;
+	margin-left: 500px;
+	position: absolute;
+	border: solid 2px;
 }
 #base{
 	float: left;
+}
+
+#nextmino{
+	position: absolute;
+	margin-left: 400px;
+	margin-top: 50px;
 }
